updated gif functions

--- a/MEG_RSA_codereview.ipynb
+++ b/MEG_RSA_codereview.ipynb
@@ -109,12 +109,20 @@
     "\n",
     "#Use animation feature to visualize RDM over time\n",
     "#animation currently lags, need to plot more efficiently and add label for timepoint\n",
+    "\n",
     "fig = plt.figure()\n",
     "\n",
     "def animate(i):\n",
     "    plt.imshow(rdm_meg[:,:,i],cmap='Blues')\n",
     "\n",
-    "anim = animation.FuncAnimation(fig,animate,interval=5)"
+    "# The lag might be due to the 5ms milisecond interval=5 you specified. Maybe try setting interval=0 or interval=1.\n",
+    "# If it is still laggy, it might be the plotting itself, which should not be a problem after exporting the gif.\n",
+    "# Some suggestions and export functions below.\n",
+    "\n",
+    "anim = animation.FuncAnimation(fig,animate, interval=5, blit=True, repeat=True, bitrate=500) # repeat -> loop gif, bitrate -> change gif quality & size, blit -> separate static from moving components when plotting\n",
+    "f = outdir + \"MEG_animation.gif\"\n",
+    "writergif = animation.PillowWriter(fps=10) # fps -> Frame rate of the exported gif \n",
+    "anim.save(f, writer=writergif)\n"
    ]
   },
   {
